--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body {
   background-color: #ff6600;
   flex-shrink: 0;
 }
-.tbs-info-iXx .auto-group-wbaw-UvS .tbs-info-2023-white-1-Yop {
+.tbs-info-iXx .auto-group-wbaw-UvS .image {
   object-fit: cover;
   vertical-align: top;
 }
