--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 html {
 	font-size:62.5%;
 }
@@ -13,31 +12,153 @@ input {
 	border: none;
 }
 body {
-  width: 25rem;
-}.tbs-info-iXx {
+  width: 102.4rem;
+}.tbs-online-WxE {
   box-sizing: border-box;
-  padding: 0.8rem 3.2rem 0.7rem 1.5rem;
+  padding: 2.7rem 8.2rem 2.7rem 8.1rem;
   width: 100%;
   overflow: hidden;
   position: relative;
   display: flex;
-  align-items: center;
-  background-color: #1e1e1e;
+  column-gap: 0.7rem;
+  align-items: flex-start;
+  background-color: #191919;
 }
-.tbs-info-iXx .auto-group-wbaw-UvS {
-  margin-right: 3.3rem;
+.tbs-online-WxE .infocard-aai {
+  margin-top: 20.6rem;
   box-sizing: border-box;
-  padding: 1.8rem 0.3rem;
-  height: 5.5rem;
+  padding: 1rem 3.1rem 1rem 1rem;
+  height: 7.5rem;
+  display: flex;
+  align-items: center;
+  background-color: #2d2d2d;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .infocard-aai .auto-group-hk2n-5pJ {
+  margin-right: 3.6rem;
+  box-sizing: border-box;
+  padding: 1.8rem 0.2rem 1.761rem 0.3rem;
+  height: 100%;
   background-color: #ff6600;
   flex-shrink: 0;
 }
-.tbs-info-iXx .auto-group-wbaw-UvS .image {
+.tbs-online-WxE .infocard-aai .auto-group-hk2n-5pJ .image-M18 {
+  width: 5rem;
+  height: 1.9388rem;
   object-fit: cover;
   vertical-align: top;
 }
-.tbs-info-iXx .tbs-info-qY2 {
-  margin-bottom: 0.1rem;
+.tbs-online-WxE .infocard-aai .text-auU {
+  margin-top: 0.1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.5rem;
+  font-weight: 400;
+  line-height: 1.2125;
+  color: #ffffff;
+  font-family: Inter, 'Source Sans Pro';
+  white-space: nowrap;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .auto-group-aj5l-xv2 {
+  width: 35.3rem;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .auto-group-aj5l-xv2 .group-eXx {
+  margin-bottom: 5.1rem;
+  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .auto-group-aj5l-xv2 .group-eXx .text-big {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 5rem;
+  font-weight: 400;
+  line-height: 1.115;
+  color: #ffffff;
+  font-family: Comfortaa, 'Source Sans Pro';
+  white-space: nowrap;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .auto-group-aj5l-xv2 .group-eXx .image-nna {
+  width: 35.3rem;
+  height: 9.9rem;
+  object-fit: cover;
+  vertical-align: top;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .auto-group-aj5l-xv2 .infocard-h8r {
+  margin: 0 5.3rem;
+  box-sizing: border-box;
+  padding: 1rem 3rem 1rem 1rem;
+  width: calc(100% - 10.6rem);
+  height: 7.5rem;
+  display: flex;
+  align-items: center;
+  background-color: #2d2d2d;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .auto-group-aj5l-xv2 .infocard-h8r .auto-group-9jgs-YfG {
+  margin-right: 3.5rem;
+  box-sizing: border-box;
+  padding: 1.9rem 0.2rem 1.782rem 0.3rem;
+  height: 100%;
+  background: linear-gradient(90deg, #003480 -0%, #00a6ff 100%);
+  flex-shrink: 0;
+}
+.tbs-online-WxE .auto-group-aj5l-xv2 .infocard-h8r .auto-group-9jgs-YfG .image-Ryx {
+  width: 5rem;
+  height: 1.8182rem;
+  object-fit: cover;
+  vertical-align: top;
+}
+.tbs-online-WxE .auto-group-aj5l-xv2 .infocard-h8r .text-5Hp {
+  margin-top: 0.1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.5rem;
+  font-weight: 400;
+  line-height: 1.2125;
+  color: #ffffff;
+  font-family: Inter, 'Source Sans Pro';
+  white-space: nowrap;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .infocard-Hen {
+  margin-top: 20.6rem;
+  box-sizing: border-box;
+  padding: 1rem 4.2rem 1rem 1rem;
+  height: 7.5rem;
+  display: flex;
+  align-items: center;
+  background-color: #2d2d2d;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .infocard-Hen .auto-group-ghbu-nbY {
+  margin-right: 4.7rem;
+  box-sizing: border-box;
+  padding: 2rem 0.2rem 1.88rem 0.3rem;
+  height: 100%;
+  background: linear-gradient(90deg, #00ffff -0%, #00ff00 100%);
+  flex-shrink: 0;
+}
+.tbs-online-WxE .infocard-Hen .auto-group-ghbu-nbY .image-Fk2 {
+  width: 5rem;
+  height: 1.6204rem;
+  object-fit: cover;
+  vertical-align: top;
+}
+.tbs-online-WxE .infocard-Hen .text-838 {
+  margin-top: 0.1rem;
   display: flex;
   align-items: center;
   justify-content: center;
