--- a/index.css
+++ b/index.css
@@ -24,7 +24,32 @@ body {
   align-items: flex-start;
   background-color: #191919;
 }
-.tbs-online-WxE .infocard-aai {
+.tbs-online-WxE .group-eXx {
+  margin-bottom: 5.1rem;
+  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .group-eXx .text-big {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 5rem;
+  font-weight: 400;
+  line-height: 1.115;
+  color: #ffffff;
+  font-family: Comfortaa, 'Source Sans Pro';
+  white-space: nowrap;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .group-eXx .image-nna {
+  object-fit: cover;
+  vertical-align: top;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .infocard {
   margin-top: 20.6rem;
   box-sizing: border-box;
   padding: 1rem 3.1rem 1rem 1rem;
@@ -34,7 +59,7 @@ body {
   background-color: #2d2d2d;
   flex-shrink: 0;
 }
-.tbs-online-WxE .infocard-aai .auto-group-hk2n-5pJ {
+.tbs-online-WxE .infocard .infocard-bg-tbsinfo {
   margin-right: 3.6rem;
   box-sizing: border-box;
   padding: 1.8rem 0.2rem 1.761rem 0.3rem;
@@ -42,13 +67,13 @@ body {
   background-color: #ff6600;
   flex-shrink: 0;
 }
-.tbs-online-WxE .infocard-aai .auto-group-hk2n-5pJ .image-M18 {
+.tbs-online-WxE .infocard .infocard-bg-tbsinfo .image {
   width: 5rem;
   height: 1.9388rem;
   object-fit: cover;
   vertical-align: top;
 }
-.tbs-online-WxE .infocard-aai .text-auU {
+.tbs-online-WxE .infocard .shorttxt {
   margin-top: 0.1rem;
   display: flex;
   align-items: center;
@@ -66,33 +91,6 @@ body {
   align-items: center;
   display: flex;
   flex-direction: column;
-  flex-shrink: 0;
-}
-.tbs-online-WxE .auto-group-aj5l-xv2 .group-eXx {
-  margin-bottom: 5.1rem;
-  width: 100%;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  flex-shrink: 0;
-}
-.tbs-online-WxE .auto-group-aj5l-xv2 .group-eXx .text-big {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 5rem;
-  font-weight: 400;
-  line-height: 1.115;
-  color: #ffffff;
-  font-family: Comfortaa, 'Source Sans Pro';
-  white-space: nowrap;
-  flex-shrink: 0;
-}
-.tbs-online-WxE .auto-group-aj5l-xv2 .group-eXx .image-nna {
-  width: 35.3rem;
-  height: 9.9rem;
-  object-fit: cover;
-  vertical-align: top;
   flex-shrink: 0;
 }
 .tbs-online-WxE .auto-group-aj5l-xv2 .infocard-h8r {
