--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
-.tbs-online-WxE .infocard {
+.tbs-online-WxE .infocard-tbsinfo {
   margin-top: 20.6rem;
   box-sizing: border-box;
   padding: 1rem 3.1rem 1rem 1rem;
@@ -52,7 +52,7 @@ body {
   background-color: #2d2d2d;
   flex-shrink: 0;
 }
-.tbs-online-WxE .infocard .infocard-bg-tbsinfo {
+.tbs-online-WxE .infocard-tbsinfo .infocard-bg-tbsinfo {
   margin-right: 3.6rem;
   box-sizing: border-box;
   padding: 1.8rem 0.2rem 1.761rem 0.3rem;
@@ -60,11 +60,11 @@ body {
   background-color: #ff6600;
   flex-shrink: 0;
 }
-.tbs-online-WxE .infocard .infocard-bg-tbsinfo .image {
+.tbs-online-WxE .infocard-tbsinfo .infocard-bg-tbsinfo .image-tbsinfo {
   object-fit: cover;
   vertical-align: top;
 }
-.tbs-online-WxE .infocard .shorttxt {
+.tbs-online-WxE .infocard-tbsinfo .shorttxt-tbsinfo {
   margin-top: 0.1rem;
   display: flex;
   align-items: center;
@@ -77,7 +77,18 @@ body {
   white-space: nowrap;
   flex-shrink: 0;
 }
-.tbs-online-WxE .infocard .infocard-bg-tbsnow {
+.tbs-online-WxE .infocard-tbsnow {
+  margin: 0 5.3rem;
+  box-sizing: border-box;
+  padding: 1rem 3rem 1rem 1rem;
+  width: calc(100% - 10.6rem);
+  height: 7.5rem;
+  display: flex;
+  align-items: center;
+  background-color: #2d2d2d;
+  flex-shrink: 0;
+}
+.tbs-online-WxE .infocard-tbsnow .infocard-bg-tbsnow {
   margin-right: 3.5rem;
   box-sizing: border-box;
   padding: 1.9rem 0.2rem 1.782rem 0.3rem;
@@ -85,11 +96,11 @@ body {
   background: linear-gradient(90deg, #003480 -0%, #00a6ff 100%);
   flex-shrink: 0;
 }
-.tbs-online-WxE .infocard .infocard-bg-tbsnow .image {
+.tbs-online-WxE .infocard-tbsnow .infocard-bg-tbsnow .image-tbsnow {
   object-fit: cover;
   vertical-align: top;
 }
-.tbs-online-WxE .auto-group-aj5l-xv2 .infocard-h8r .text-5Hp {
+.tbs-online-WxE .infocard-tbsnow .shorttxt-tbsnow {
   margin-top: 0.1rem;
   display: flex;
   align-items: center;
